# libncker

./: .gitignore  README.md  pyproject.toml
data_test/: hemocytesvsgills_intersect.txt  hepvsgills_intersect.txt  hepvshemocytes_intersect.txt  lncRNA_IDs.txt  musclevsgills_intersect.txt
examples/data_test/: musclevshemocytes_intersect.txt  musclevshep_intersect.txt
src/libncker/: __init__.py  __main__.py  exclusive.py  expr.py  gff_utils.py  io_utils.py  neighbors.py
